Corrected droplists behind cards; unshow counters at 1; Deduplicate some fields

--- a/_controls.scss
+++ b/_controls.scss
@@ -7,6 +7,8 @@
 	padding: 1.5rem 2rem;
 	margin-bottom: 3rem;
 	box-shadow: 0 10px 30px -10px rgba(0, 0, 0, 0.1);
+	position: relative;
+	z-index: 100;
 }
 
 .controls-top {
